--- a/package.json
+++ b/package.json
@@ -1,17 +1,14 @@
 {
   "name": "instantrockets",
   "version": "1.0.0",
-  "description": "",
+  "description": "Classic pipe puzzle game for facebook instant games.",
   "main": "./dist/main.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/BregoX/instantrockets.git"
   },
-  "author": "",
-  "license": "ISC",
+  "author": "Artsiom Ivashniou",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/BregoX/instantrockets/issues"
   },
