--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
     "tsify": "^3.0.1",
     "typescript": "^2.4.1",
     "vinyl-source-stream": "^1.1.0"
+  },
+  "dependencies": {
+    "phaser": "^2.6.2"
   }
 }
