--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   },
   "dependencies": {
     "@types/pixi.js": "^4.5.2",
+    "robotlegs-macrobot": "^1.0.1",
     "robotlegs-pixi": "^1.0.0"
   }
 }
