--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "dependencies": {
     "@types/pixi.js": "^4.5.2",
     "robotlegs-macrobot": "^1.0.1",
-    "robotlegs-pixi": "^1.0.0"
+    "robotlegs-pixi": "^1.0.0",
+    "reflect-metadata": "^0.1.10"
   }
 }
