Include sources in tsconfig for it to work properly.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
-    "files": [
-        "src/ts/Main.ts"
+    "include": [
+        "src/**/*.ts"
     ],
     "compilerOptions": {
         "target": "es5",
