--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
     "include": [
-        "src/**/*.ts"
+        "src/main/ts/**/*.ts"
     ],
     "compilerOptions": {
         "target": "es5",
