Add mocha. No type definitions.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
     "include": [
-        "src/main/ts/**/*.ts"
+        "src/main/ts/**/*.ts",
+        "src/test/ts/**/*.ts"
     ],
     "compilerOptions": {
         "target": "es5",
