--- a/package.json
+++ b/package.json
@@ -15,11 +15,14 @@
   "homepage": "https://github.com/BregoX/instantrockets#readme",
   "devDependencies": {
     "browserify": "^14.4.0",
+    "chai": "^4.1.2",
     "gulp": "^3.9.1",
+    "gulp-mocha": "^4.3.1",
     "gulp-sourcemaps": "^2.6.0",
     "gulp-typescript": "^3.2.1",
     "gulp-uglify": "^3.0.0",
     "gulp-util": "^3.0.8",
+    "mocha": "^3.5.3",
     "tsify": "^3.0.1",
     "typescript": "^2.4.2",
     "vinyl-buffer": "^1.0.0",
