--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   },
   "homepage": "https://github.com/BregoX/instantrockets#readme",
   "devDependencies": {
+    "@types/chai": "^4.0.4",
+    "@types/mocha": "^2.2.43",
     "browserify": "^14.4.0",
     "chai": "^4.1.2",
     "gulp": "^3.9.1",
